# quorum_time

./: .gitignore  .openapi.yaml  .securetimeauthority.crd.yaml  .securetimecluster.crd.yaml  .securetimepolicy.crd.yaml  .sidecar_deployment.yaml  CMakeLists.txt  LICENSE.md  README.md  bft_quorum_clock.cpp  build.sh  build_python.sh  build_sdk.sh  cold_vault.cpp  crypto_utils.cpp  deployment.yaml  example_skew_correction.py  example_warm_boot.py  file_vault_backend.cpp  integration_guide.md  main_ntp.cpp  main_sidecar.cpp  ntp_observation_fetcher.cpp  sidecar_docker.txt  sidecar_kubernetes.yaml
bindings/python/uml001/: __init__.py  types.py  vault_mock.py
bridge/: Dockerfile  build_bridge.sh  pyproject.toml
bridge/bridge/: __init__.py  auth.py  bridge_pb2.py  bridge_pb2_grpc.py  clock_state.py  config.py  formats.py  grpc_server.py  ntp_udp_server.py  poll_loop.py  rest_server.py  server_main.py  ws_server.py
bridge/bridge/proto/: bridge.proto
bridge/tests/: __init__.py  conftest.py  test_auth.py  test_clock_state.py  test_codegen_version_contract.py  test_config  test_config_tls_validation.py  test_formats.py  test_grpc_startup_smoke.py  test_integration.py  test_ntp_udp.py  test_server_main_startup_invariants.py
bridge/tools/: check_codegen_drift.py
client/python/: __init__.py  pyproject.toml
client/python/uml001_client/: __init__.py  api.py  exceptions.py  models.py
core/bft_quorum_clock/: bft_quorum_clock.h  bft_quorum_clock_schema.h  crypto_utils_extensions.h  main_ntp.h  ntp_observation_fetcher.h  rotation_event.h  strong_clock.h
core/cold_vault/: crypto_interfaces.h  crypto_utils.h  file_vault_backend.h  gcm_encryptor.h  hsm_hash_provider.h  merkle_rotation_signer.h  merkle_tree_accumulator.h  vault.h
include/.cold_vault/: crypto_utils.h
include/uml001/: align_time.h  bft_quorum_clock.h  bft_quorum_clock_schema.h  clock_governor.h  clock_service_impl.h  cluster_state.h  crypto_interfaces.h  crypto_mode.h  crypto_utils.h  crypto_utils_extensions.h  default_gossip_provider.h  event_context.h  event_orchestrator.h  event_pipeline_stage.h  file_vault_backend.h  gcm_encryptor.h  gossip_dedup.h  gossip_interface.h  governor.h  hardened_clock.h  hash_provider.h  hsm_hash_provider.h  key_lifecycle_manager.h  key_rotation_manager.h  main_ntp.h  merkle_rotation_signer.h  merkle_tree_accumulator.h  ntp_observation_fetcher.h  os_strong_clock.h  pipeline_bootstrap.h  pipeline_event_codec.h  pipeline_event_ids.h  quorum_time_adapter.h  rest_auth_config.h  rest_handlers.h  rotation_event.h  runtime_mode_machine.h  sidecar.h  simple_file_vault_backend.h  simple_hash_provider.h  (+3 more)
include/uml001/stages/: circuit_breaker_stage.h  convergence_stage.h  gossip_stage.h  hitl_gate_stage.h  merkle_stage.h  mode_control_stage.h  passport_validation_stage.h  quarantine_stage.h  quorum_stage.h  recovery_stage.h  shared_state_ingress_stage.h  vault_stage.h
openapi/: uml001.yaml
proto/: clock_service.proto  signed_state.proto
rest/: rest_handlers.cpp  rest_server.cpp
sdks/python/: README.md  __init__.py  bft_clock.py  crypto_utils.py  ntp_fetcher.py  pyproject.toml  test_sdk.py  vault.py
sdks/python/uml001/: __init__.py  bft_clock.py  crypto_utils.py  ntp_fetcher.py  pipeline_event_ids.py  runtime_mode.py  sync_daemon.py  vault.py
sdks/python/uml001.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
spec/examples/canonical/: bft_shared_state.rest_time_shared_state.json  event_context.aborted.hitl_hold.json  event_context.minimal.json  signed_state.control_set_mode.json  signed_state.internal_shared_state_apply.json  signed_state.rest_auth_failed.json  signed_state.rest_time_now.json  signed_state.worker_ntp_sync.json
spec/schemas/: aegis_protocol_ntp.schema.json  bft_clock_config.schema.json  bft_quorum_clock.schema.json  bft_shared_state.schema.json  catalog.json  convergence.schema.json  crypto_config.schema.json  crypto_key_metadata.schema.json  encrypted_log_envelope.schema.json  event_context.schema.json  file_vault_backend.schema.json  gossip_policy.schema.json  hsm_config.schema.json  key_rotation_config.schema.json  key_rotation_event.schema.json  merkle_manifest.schema.json  ntp_servers.schema.json  pipeline_event_id.schema.json  rotation_signature.schema.json  runtime_mode.schema.json  shared_clock_state.schema.json  signed_state.proto  signed_state_envelope.schema.json  simple_file_vault_backend.cpp  time_proof.schema.json  timestamp_attestation_token.json  trusted_authorities.schema.json  vault.schema.json  vault_config.schema.json  vault_log_entry.schema.json
src/core/: align_time.cpp  bft_quorum_clock.cpp  clock_service_impl.cpp  cold_vault.cpp  crypto_utils.cpp  event_orchestrator.cpp  file_vault_backend.cpp  key_rotation_manager.cpp  main_ntp.cpp  main_sidecar.cpp  ntp_observation_fetcher.cpp  os_strong_clock.cpp  pipeline_bootstrap.cpp  pipeline_event_codec.cpp  quorum_time_adapter.cpp  runtime_mode_machine.cpp  simple_file_vault_backend.cpp  simple_hash_provider.cpp  vault_logger.cpp
src/core/stages/: circuit_breaker_stage.cpp  (+11 more)
src/gossip/: ConvergenceTracker.cpp  ConvergenceTracker.h  GossipDedup.cpp  GossipForwarder.cpp  GossipForwarder.h  MerkleVaultLog.cpp  MerkleVaultLog.h  TTLPolicy.cpp  TTLPolicy.h  default_gossip_provider.cpp
src/python/: CMakeLists.txt  uml001_bindings.cpp
src/rest/: rest_handlers.cpp
tests/: conftest.py  mock_ntp.py  test_align_time.cpp  test_bft_clock.py  test_bft_clock_fixture.py  test_bft_quorum_clock.py  test_bft_shared_state_schema_contract.cpp  test_control_plane_stages.cpp  test_default_gossip_provider.cpp  test_gossip_security_regressions.cpp  test_integration.py  test_key_rotation.py  test_ntp_fetcher.py  test_pipeline_codec_decode_hardening.cpp  test_pipeline_wiring.cpp  test_rest_api.py  test_schema_catalog_consistency.cpp  test_schema_validator.py  test_service_ingress_pipeline.cpp  test_shared_state_internal_event.cpp  test_shared_state_route_contract.cpp  test_vault.py
tests/support/: vault_mock.py
tools/: apply_spdx_headers.py  debug_hmac.py  determinism_merkle_harness.cpp  smoke_rest_server.sh
