[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uml001"
version = "0.1.0"
description = "BFT Quorum Clock SDK with ColdVault Persistence"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["uml001*"]

[tool.setuptools.package-data]
# This ensures the compiled C++ extension is included in the installation
uml001 = ["*.so", "*.pyd", "*.dylib"]